속성 설명 깨짐 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,13 @@ spring.application.name=OllamaTest
 
 spring.ai.ollama.base-url=http://192.168.5.182:11434
 
-#??? ?? ?? ? ?????.
+#??? ?? ?? ? ????? .
 spring.ai.ollama.chat.options.model=llama3
 
 #Ollama ?? ?????? ??????.
-#spring.ai.ollama.chat.enabled=true
+spring.ai.ollama.chat.enabled=true
 
-#NUMA ?? ??.
+#NUMA ?? ??..
 #spring.ai.ollama.chat.options.numa=false
 
 #?? ??? ???? ? ???? ???? ?? ??? ?????.
@@ -68,10 +68,10 @@ spring.ai.ollama.chat.options.model=llama3
 #???? ??? ??? ????. ?? ????(?: 100) ??? ? ?????, ?? ????(?: 10) ? ??????.
 #spring.ai.ollama.chat.options.top-k=40
 
-#???? ?? ?????. ?? ????(?: 0.95) ? ??? ???? ????, ?? ????(?: 0.5) ? ????? ???? ???? ?????.
+#top-k? ?? ?????. ?? ????(?: 0.95) ? ??? ???? ????, ?? ????(?: 0.5) ? ????? ???? ???? ?????.
 #spring.ai.ollama.chat.options.top-p=0.9
 
-#?? ?? ???? ???? ?????? ?? ??? ??? ??? ?? ?????. ?? ????(?: 2.0) ??? ? ????, ?? 1.0?? ? ??? ???????.
+#Tail-free sampling? ???? ???? ?? ??? ??? ??? ?? ?????. ?? ????(?: 2.0) ??? ? ????, ?? 1.0?? ? ??? ???????.
 #spring.ai.ollama.chat.options.tfs-z=1.0
 
 #???
