--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=OllamaTest
 
-spring.ai.ollama.base-url=http://192.168.5.182:11434
+#spring.ai.ollama.base-url=http://192.168.5.182:11434
+spring.ai.ollama.base-url=http://192.168.123.106:11434
 
 #??? ?? ?? ? ????? .
 spring.ai.ollama.chat.options.model=llama3
